--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,26 @@
 {
-  "name": "frequenc1/php-osc",
-  "type": "library",
-  "description": "Open Sound Control (OSC) Client Library for PHP",
-  "authors": [
-    {
-      "name": "Andy  W. Schmeder",
-      "email": "andy@a2hd.com"
+    "name": "frequenc1/php-osc",
+    "type": "library",
+    "description": "Open Sound Control (OSC) Client Library for PHP",
+    "authors": [
+        {
+            "name": "Andy  W. Schmeder",
+            "email": "andy@a2hd.com"
+        },
+        {
+            "name": "Jason Soares",
+            "email": "jsoares@theexperiment.org"
+        }
+    ],
+    "require": {
+        "php": ">=5.3.0"
     },
-    {
-      "name": "Jason Soares",
-      "email": "jsoares@theexperiment.org"
+    "require-dev": {
+        "phpunit/phpunit": "4.3.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "PhpOSC\\": "src/"
+        }
     }
-  ],
-  "require": {
-    "php": ">=5.3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "PhpOSC\\": "src/"
-    }
-  }
 }
